--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tauri-apps/api": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-range": "^1.8.14"
+    "react-range": "^1.8.14",
+    "remixicon": "^3.5.0",
+    "tauri-plugin-positioner-api": "^0.2.7"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.5",
