install new packages

--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "tauri-react-template",
+  "name": "sidepod",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build"
+    "tauri:build": "tauri build --target universal-apple-darwin"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.4.0",
+    "@tauri-apps/plugin-global-shortcut": "github:tauri-apps/tauri-plugin-global-shortcut#v2",
+    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^4.4.1",
     "react-range": "^1.8.14",
     "remixicon": "^3.5.0",
+    "spotify-web-api-node": "^5.0.2",
     "tauri-plugin-positioner-api": "^0.2.7"
   },
   "devDependencies": {
