--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
+name = "sidepod"
+version = "0.1.1"
+description = "Spotify widget to control your music"
 authors = ["you"]
 license = ""
 repository = ""
-default-run = "app"
+default-run = "sidepod"
 edition = "2021"
 rust-version = "1.57"
 
@@ -17,8 +17,17 @@ tauri-build = { version = "1.0.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = [ "window-start-dragging", "window-set-always-on-top", "window-close", "window-set-decorations", "window-set-skip-taskbar", "window-set-position", "window-set-max-size", "window-hide", "window-set-size", "window-center", "window-set-min-size", "window-show", "window-set-icon", "window-set-fullscreen", "window-set-focus", "clipboard-read-text", "fs-all", "global-shortcut-all", "macos-private-api", "notification-all", "process-exit", "process-relaunch", "shell-execute", "shell-open", "system-tray"] }
+tauri = { version = "1.2", features = [ "updater", "window-start-dragging", "window-set-always-on-top", "window-close", "window-set-decorations", "window-set-skip-taskbar", "window-set-position", "window-set-max-size", "window-hide", "window-set-size", "window-center", "window-set-min-size", "window-show", "window-set-icon", "window-set-fullscreen", "window-set-focus", "clipboard-read-text", "fs-all", "global-shortcut-all", "macos-private-api", "notification-all", "process-exit", "process-relaunch", "shell-execute", "shell-open", "system-tray"] }
 tauri-plugin-positioner = "1.0"
+rand = "0.8"
+anyhow = "1"
+reqwest = "0.11"
+tokio = { version = "1", features = ["full"] } 
+
+[target."cfg(target_os = \"macos\")".dependencies]
+core-graphics = {version = "0.22.3"}
+core-foundation = { version = "0.9.3" }
+cocoa = { version = "0.24.1" }
 
 [features]
 # by default Tauri runs in production mode
