--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sidepod"
-version = "0.1.1"
+version = "0.1.2"
 description = "Spotify widget to control your music"
 authors = ["you"]
 license = ""
@@ -23,6 +23,7 @@ rand = "0.8"
 anyhow = "1"
 reqwest = "0.11"
 tokio = { version = "1", features = ["full"] } 
+tray-item = "0.8.0"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 core-graphics = {version = "0.22.3"}
